# m-pt1-63-23

./: .gitignore  404.html  README.md  TODO.md  docker-compose.yml  index.html  sitemap.xml
.github/workflows/: integration.yml  services-docs.yaml  services-webapp.yml
.run/: webapp - code - black.run.xml  webapp - code - flake8.run.xml  webapp - code - isort.run.xml  webapp - code - mypy.run.xml  webapp - code - pytest.run.xml  webapp - runner.run.xml  webapp - tests - pytest.run.xml
search/: search_index.json
services/dba/: .pgpass  servers.json
services/docs/: Dockerfile  Taskfile.yml  mkdocs.yml  pyproject.toml
services/docs/docs/: index.md
services/webapp/: .coveragerc  .dockerignore  Dockerfile  Taskfile.yml  pyproject.toml
services/webapp/hw/alexander_haiko/: lesson03.py
services/webapp/hw/alexander_sidorov/: lesson03.py
services/webapp/hw/alexandr_sidorov/: lesson03.py
services/webapp/hw/anton_dmitruk/: lesson03.py
services/webapp/hw/dmitriy_zhdanovich/: lesson03.py
services/webapp/hw/egor_pyshny/: lesson03.py
services/webapp/hw/ilya_chernousik/: lesson03.py
services/webapp/hw/ilya_putrich/: lesson3.py
services/webapp/hw/maksim_berezovik/: lesson03.py
services/webapp/hw/nikita_harbatsevich/: lesson3.py
services/webapp/hw/sergei_butkevich/: lesson03.py
services/webapp/hw/vadim_zhurau/: lesson03.py
services/webapp/hw/victor_bushilo/: lesson03.py
services/webapp/tests/integration/: test_app.py
services/webapp/tests/integration/hw/alexander_sidorov/: test_lesson03.py
services/webapp/webapp/: asgi.py  runner.py
